--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body {
     width: 100%;
     height: 100vh;
     margin: 0;
-    background-color: #ef3170;
-    color: #eebbc3;
+    background-color: rgb(181, 247, 225);
+    color:  rgba(3, 83, 46, 0.664);
     font-family: Tahoma;
     font-size: 16px;
   }
@@ -24,7 +24,7 @@ body {
   fieldset {
     border: none;
     padding: 2rem 0;
-    border-bottom: 3px solid #eebbc3;
+    border-bottom: 3px solid rgba(2, 66, 36, 0.664);
   }
   
   fieldset:last-of-type {
@@ -45,9 +45,9 @@ body {
   }
   
   input, textarea {
-    background-color: #eebbc3;
+    background-color: rgba(53, 138, 98, 0.774);
     border: 1px solid #3b3b4f;
-    color: #e53170;
+    color: rgb(181, 247, 225);
   }
   
   .inline {
@@ -62,8 +62,8 @@ body {
     margin: 1em auto;
     height: 2em;
     font-size: 1.1rem;
-    background-color: #eebbc3;
-    border-color: #e53170;
+    background-color: rgba(2, 66, 36, 0.664);
+    border-color: rgb(181, 247, 225);
     min-width: 300px;
   }
   
@@ -71,5 +71,6 @@ body {
     padding: 1px 2px;
   }
   #terms {
-    color: lightyellow;
+    color: rgba(15, 18, 214, 0.678);
+    font weight: bold;
   }
