--- a/style.css
+++ b/style.css
@@ -45,9 +45,9 @@ body {
   }
   
   input, textarea {
-    background-color: rgba(53, 138, 98, 0.774);
+    background-color: white;
     border: 1px solid #3b3b4f;
-    color: rgb(181, 247, 225);
+    color: rgba(53, 138, 98, 0.774);
   }
   
   .inline {
@@ -65,12 +65,22 @@ body {
     background-color: rgba(2, 66, 36, 0.664);
     border-color: rgb(181, 247, 225);
     min-width: 300px;
+    color: white;
   }
   
   input[type="file"] {
     padding: 1px 2px;
   }
+
   #terms {
     color: rgba(15, 18, 214, 0.678);
     font weight: bold;
+  }
+
+  #bio, textarea {
+    background-color: white;
+  }
+
+  #profile-picture {
+    
   }
